<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<LinearLayout
			android:id="@+id/name_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/name_textView"
				android:layout_width="wrap_content"
				android:layout_height="26dp"
				android:layout_marginEnd="8dp"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:text="@string/insert_name"
				android:textColor="@color/textColorPrimary"
				android:textSize="16sp"
				android:visibility="visible" />

			<EditText
				android:id="@+id/name_editText"
				android:layout_width="240dp"
				android:layout_height="45dp"
				android:layout_marginEnd="8dp"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:ems="10"
				android:hint="@string/name_entry_hint"
				android:inputType="textPersonName"
				android:textColor="@color/textColorPrimary"
				android:textSize="18sp" />
		</LinearLayout>

		<LinearLayout
			android:id="@+id/race_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/race_textView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="8dp"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:text="@string/race_selection"
				android:textColor="@color/textColorPrimary"
				android:textSize="16sp" />

			<Spinner
				android:id="@+id/race_spinner"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="8dp"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:layout_marginStart="8dp"
				android:layout_marginTop="4dp"
				android:textColor="@color/textColorPrimary" />
		</LinearLayout>

		<TextView
			android:id="@+id/testing"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/textColorPrimary"
			android:visibility="visible" />

		<RadioGroup
			android:id="@+id/sub_race"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="visible">

		</RadioGroup>

		<LinearLayout
			android:id="@+id/class_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/class_textView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="8dp"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:text="@string/class_selection"
				android:textColor="@color/textColorPrimary"
				android:textSize="16sp" />

			<Spinner
				android:id="@+id/class_spinner"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="8dp"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:layout_marginStart="8dp"
				android:layout_marginTop="4dp"
				android:textColor="@color/textColorPrimary" />
		</LinearLayout>

		<TextView
			android:id="@+id/testing2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/textColorPrimary"
			android:visibility="visible" />

		<RadioGroup
			android:id="@+id/archetype"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="visible" />

		<LinearLayout
			android:id="@+id/level_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/level_textView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:layout_marginTop="8dp"
				android:text="@string/level_selection"
				android:textColor="@color/textColorPrimary"
				android:textSize="16sp" />

			<Spinner
				android:id="@+id/level_spinner"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:layout_marginTop="8dp"
				android:textColor="@color/textColorPrimary" />
		</LinearLayout>

		<TextView
			android:id="@+id/testView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/textColorPrimary"
			android:visibility="visible" />
	</LinearLayout>
</ScrollView>